# wgpu-tutorial

./: Cargo.toml  README.md
examples/ch01/: test01.rs
examples/ch02/: common.rs  first_triangle.rs  first_triangle.wgsl  triangle_vertex_color.rs  triangle_vertex_color.wgsl
examples/ch03/: point_line.rs  point_line.wgsl  triangles.rs  triangles.wgsl
examples/ch04/: square.rs  square_index.rs  triangle.wgsl  triangles.rs
examples/ch05/: rotation.rs  scaling.rs  view_projection.rs
examples/ch06/: camera.rs  camera_control.rs  cube_face_color.rs  cube_face_color.wgsl  cube_vertex_color.rs  line3d.rs  line3d.wgsl  rotate_cube.rs
examples/ch07/: common.rs  cone.rs  cube.rs  cylinder.rs  sphere.rs  torus.rs
examples/ch08/: common.rs  cube.rs  shader.wgsl
examples/ch09/: common.rs  shader.wgsl  sinc.rs
examples/ch10/: common.rs  cube.rs  shader.wgsl
examples/common/: colormap.rs  common.rs  math_func.rs  surface_data.rs  texture_data.rs  transforms.rs  vertex_data.rs
