[package]
name = "wgpu_book"
version = "0.1.0"
edition = "2021"

[[example]]
name = "ch01_test01"
path = "examples/ch01/test01.rs"

[[example]]
name = "ch02_first_triangle"
path = "examples/ch02/first_triangle.rs"

[[example]]
name = "ch02_color_triangle"
path = "examples/ch02/triangle_vertex_color.rs"

[[example]]
name = "ch03_point_line"
path = "examples/ch03/point_Line.rs"

[[example]]
name = "ch03_triangles"
path = "examples/ch03/triangles.rs"

[[example]]
name = "ch04_triangles"
path = "examples/ch04/triangles.rs"

[[example]]
name = "ch04_square"
path = "examples/ch04/square.rs"

[[example]]
name = "ch04_square_index"
path = "examples/ch04/square_index.rs"

[[example]]
name = "ch05_scaling"
path = "examples/ch05/scaling.rs"

[[example]]
name = "ch05_rotation"
path = "examples/ch05/rotation.rs"

[[example]]
name = "ch05_view_projection"
path = "examples/ch05/view_projection.rs"

[[example]]
name = "ch06_line3d"
path = "examples/ch06/line3d.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.1"
cgmath = "0.18.0"
env_logger = "0.10.0"
futures = "0.3.28"
gfx-hal = "0.9"
image = "0.24.6"
log = "0.4.17"
pollster = "0.3.0"
winit = "0.28.7"
anyhow = "1.0.71"
bytemuck = { version = "1.14.0", features = ["derive"] }
